--- a/estilos/style.css
+++ b/estilos/style.css
@@ -160,12 +160,12 @@ body {
 .cuerpo
 {
     width: 100%;
-    height:1500px;
+    height:1200px;
 }
 #cuerpo
 {
     width: 100%;
-    height:1500px;
+    height:1200px;
 }
 
 #content a{
@@ -303,6 +303,26 @@ body {
     padding:10px;
     overflow: hidden;
 }
+
+/*******************************
+ *Formularios*
+ * ************************** */
+.edt{
+	background-color: rgb(204,204,255);
+	border: 1px; 
+  	border-color: rgb(255,255,153); 
+  	border-radius: 4px;
+}
+.btn{
+	border: 1px; 
+  	/*border-color: rgb(255,255,53); */
+  	border-radius: 4px;	
+  	text-shadow: #555 1px 1px 1px;
+}
+
+.form{
+	background-color: transparent;
+}
 /* SIDEBAR ------------------------------------------------------------*/
 
 #sidebar {
@@ -342,10 +362,11 @@ h1{ font-size: 30px; }
 
 h2{ 
     font-size: 24px;
-    background:white;
+    
+    background:rgb(204,204,255);
     text-align:center;
     border-radius:4px;
-    text-shadow: #555 2px 2px 3px;
+    text-shadow: #555 1px 2px 1px;
 }
 
 h3{ font-size: 26px; }
