cambios en el formato del sitio cambios en la seccion contacto cambios en la libreria galerias

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .wrapper{
-	width: 966px;
+	width: 100%;
 	margin: 0px auto;
 	position: relative;
     float:center;
@@ -160,12 +160,12 @@ body {
 .cuerpo
 {
     width: 100%;
-    height:1200px;
+    min-height:1000px;
 }
 #cuerpo
 {
     width: 100%;
-    height:1200px;
+    min-height:1000px;
 }
 
 #content a{
@@ -288,7 +288,7 @@ body {
 /*Columnas*/
 .derecha
 {
-    width: 600px;
+    width: 68%;
     float:right;   
     background-color:transparent;   
     padding:10px;
@@ -297,7 +297,7 @@ body {
 
 .izquierda
 {
-    width: 300px;
+    width: 25%;
     float:left;
     background-color:transparent;    
     padding:10px;
@@ -312,16 +312,20 @@ body {
 	border: 1px; 
   	border-color: rgb(255,255,153); 
   	border-radius: 4px;
+    margin-top:5px;
 }
 .btn{
-	border: 1px; 
-  	/*border-color: rgb(255,255,53); */
+	border: 2px;   	
   	border-radius: 4px;	
   	text-shadow: #555 1px 1px 1px;
+    margin-top:5px;
+    height:20px
 }
 
 .form{
 	background-color: transparent;
+    padding:15px;
+    margin:15px;
 }
 /* SIDEBAR ------------------------------------------------------------*/
 
@@ -377,161 +381,118 @@ h5{ font-size: 22px; }
 
 h6{ font-size: 20px; }
 
-/* Inferior */
-#bottom .social a{
-	display: block;
-	width: 32px;
-	height: 32px;
-	text-indent: -9000px;
-}
 
-#bottom .social a:hover{
-	background-position: 0px -32px;
-}
-/* FOOTER - COLS ------------------------------------------------------------*/
+/* Pie de pagina*/
+
+footer{
+	position:relative;
+	height:20px;
+	clear:both;
+	width:100%;
+	margin-bottom:18px;
+	background-color:transparent;
+    border-radius: 8px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    background-image: linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -o-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -moz-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -webkit-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -ms-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0, rgb(200,200,199)),
+	color-stop(0, rgb(53,29,237)),
+	color-stop(0.78, rgb(20,20,20))
+);
+	}
 
 #footer{
-	position: relative;
-    float:center;
-    padding:10px;
-    width:100%;
-	background: #2a2d30 url(../imagenes/footer-glow.png) no-repeat top center;
-	color: #fff;
-}
-.footer{
-	position: relative;
-    float:center;
-    padding:10px;
-    width:100%;
-	background: #2a2d30 url(../imagenes/footer-glow.png) no-repeat top center;
-	color: #fff;
-}
+	position:relative;
+	height:20px;
+	clear:both;
+	width:100%;
+	margin-bottom:18px;
+	background-color:transparent;
+    border-radius: 8px;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    background-image: linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -o-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -moz-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -webkit-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
+    background-image: -ms-linear-gradient(bottom, rgb(200,200,199) 0%, rgb(53,29,237) 0%, rgb(20,20,20) 78%);
 
-/* FOOTER - COLS ------------------------------------------------------------*/
+background-image: -webkit-gradient(
+	linear,
+	left bottom,
+	left top,
+	color-stop(0, rgb(200,200,199)),
+	color-stop(0, rgb(53,29,237)),
+	color-stop(0.78, rgb(20,20,20))
+);
+	}
 
-#footer-cols{
-	display: block;
-	overflow: hidden;
-	color: #bbbaba;
-	line-height: 1.5em;
-}
-
-#footer-cols li.col{
-	display: block;
-	font-size: 12px;
-	width: 250px;
-	float: left;
-	margin-left: 30px;
-	margin-bottom: 30px;
+#footer li{
+    list-style-type:none;
+    
 }
 
-#footer-cols li.col>h6{
-	color: #d7d7d7;
-	margin-top: 30px;
-	margin-bottom: 20px;
-	text-shadow: 0px -2px rgba(0, 0, 0, .8);
+#footer a{
+    text-decoration:none;
+    color: rgb(250,250,250);
 }
 
-#footer-cols li.clear-col{ clear:left; }
-
-#footer-cols li.col ul{
-	display: block;
+#footer a:hover{
+    text-decoration:none;
+    color: rgb(250,250,250);
+    font-weight:bold;
+}
+    
+#FooterOne, #FooterTwo, #FooterTree {
+	position: absolute;	
+    vertical-align:top;
 }
 
-#footer-cols li.col ul li{
-	display: block;
-	line-height: 1.7em;
+#FooterOne{
+    position: absolute;;
+	left: 25px;
+    color:white;
 }
 
-
-#footer-cols li.col ul li.page_item{
-	display: block;
-	line-height: 2.5em;
-	padding-left: 17px;
-	border-top: 1px solid #4a4a4a;
-	border-bottom: 1px solid #000;
-	background: url(../imagenes/footer-bullet.png) no-repeat 0px 10px;
-}
-
-#footer-cols li.col ul li:first-child{ border-top: none; }
-
-#footer-cols li.col ul li:last-child{ border-bottom: none; }
-
-#footer-cols li.col ul li a{
-	text-decoration: none;
-	color: #bbbaba;
-}
-
-#footer-cols li.col ul li a:hover
-{
-	color: #fff;
-    font-style:italic;
- }
- 
-/* FOOTER BOTTOM --------------------------------------------------------*/
-
-#bottom{
-	position: relative;
-	width: 100%;
-    padding:10px;
-	font-size: 12px;
-	line-height: 1.5em;
-	line-height: 60px;
-	color: #868686;
-	background: #222426 url(../imagenes/bottom-shadow.png) repeat-x;
-}
-
-#bottom #bottom-text{
-	width: 600px;
-	overflow: hidden;
-	margin-left: 30px;	
-}
-
-#bottom-text  a:hover
-{
-    color:blue;
-}
-
-#bottom a{
-	color: #AFEAF9;
-	text-decoration: none;
-}
-
-#bottom #to-top{
+#FooterTwo{
 	position: absolute;
-	right: 30px;
-	top: -22px;
-	width: 33px;
-	height: 33px;
-	background: url(../imagenes/to-top.png) no-repeat;
-	cursor: pointer;
+	left: 240px;
+	top:26px;
+	color:white;
+    
 }
-/* SOCIAL --------------------------------------------------------*/
 
-.social{
+#FooterTree{
 	position: absolute;
-	top: 15px;
-	right: 0px;
-	display: block;
-	overflow: hidden;
+	right: 225px;
+	top:26px;
+	color:white;
+
 }
 
-.social li{
-	display: block;
-	width: 32px;
-	height: 32px;
-	float: left;
-	margin-right: 10px;
-	margin-bottom: 10px;
+#FooterTree a{
+    text-decoration:none;    
 }
 
-#bottom .social a{
-	display: block;
-	width: 32px;
-	height: 32px;
-	text-indent: -9000px;
+#FooterTree a:hover{
+    text-decoration:none;
+    font-weight:bold;
 }
 
-#bottom .social a:hover{
-	background-position: 0px -32px;
+.container{
+    width:100%;
+    margin:0 auto;
+	background-color:transparent;
+    text-align:center;
+    color: rgb(240,240,240);
+    font-size:10px;
 }
