cambios en la configuracion del sistema incorporacion de pestañas, presentacion de imagenes

--- a/estilos/craftyslide.css
+++ b/estilos/craftyslide.css
@@ -48,7 +48,7 @@ Craftyslide CSS Styles
 	width:10px;
 	height:10px;
 	text-indent:-10000px;
-	background:url(../images/pagination.png);
+	background:url(../imagenes/galerias/pagination.png);
 }
 
 #pagination li a.active {
