--- a/estilos/adicional.css
+++ b/estilos/adicional.css
@@ -50,7 +50,11 @@ h1 {
  position: relative;
  width: 100%;
  z-index: 5;
- font-size:12px;
+ font-size:15px;
+ font-family:Calibri,Georgia,Verdana;
+ letter-spacing:1px;
+ word-spacing:1px;
+ line-height:18px;
  text-indent:15px;
  
 }
