cambios basicos estilos

--- a/media/styles/styles.css
+++ b/media/styles/styles.css
@@ -204,7 +204,11 @@ footer a {
     }
 
     img {
-        width: 130%;
+        //width: 130%;
+    }
+
+    .gallery {
+        width: 1000px;
     }
 
     .left {
