agregada configuracion para enviar mail que tenia problemas, cambiados los errores de formulario a espaniol la api de facebook da problema con ese id

--- a/media/styles/forms-ui.css
+++ b/media/styles/forms-ui.css
@@ -4,6 +4,8 @@
 }
 
 .form-ui label {
+    font-size: 10pt;
+    font-weight: bold;
     display: block;
     margin-left: 10pt;
     margin-bottom: 3pt;
