--- a/media/styles/styles.css
+++ b/media/styles/styles.css
@@ -19,6 +19,11 @@ nav ul li {
 }
 
 
+em {
+    font-weight: bold;
+}
+
+
 .line {
     background-color: #80FF00;
     border-top: 5px solid #FFF;
@@ -211,6 +216,31 @@ footer a {
     color: #FFF;
 }
 
+
+.notify {
+    font-family: OpenSans;
+    font-size: 14pt;
+    background-color: #CCE6FF;
+    border-left: 5px solid #0063C6;
+    padding: 10px;
+}
+
+.error {
+    font-family: OpenSans;
+    font-size: 14pt;
+    background-color: #FF6C6C;
+    border-left: 5px solid #FF0000;
+    padding: 10px;
+}
+
+
+.ferror {
+    color: #B90000;
+    border-left: 3px solid #EC0000;
+    padding: 5px 10px;
+    font-size: 9pt;
+    font-family: OpenSans;
+}
 
 
 @media screen and (min-width:1030px) {
